--- a/cpg1.5.x/themes/sample/style.css
+++ b/cpg1.5.x/themes/sample/style.css
@@ -22,6 +22,7 @@
    Hex BDBEBD = RBG 189, 190, 189 = dark grey
    Hex D1D7DC = RBG 209, 215, 220 = medium grey
    Hex CCCCCC = RBG 204, 204, 204 = medium grey
+   Hex E4E4E4 = RGB 228, 228, 228 = medium grey
    Hex EFEFEF = RBG 239, 239, 239 = dark white
    Hex FFFFFF = RBG 255, 255, 255 = white
    Hex 005D8C = RBG   0,  93, 140 = dark blue
@@ -91,7 +92,7 @@ form {
 }
 
 .inline {
-    display:inline;
+    /*display:inline;*/
 }
 
 .textinput {
@@ -176,8 +177,7 @@ a:active {
 
 .maintable {
     border: 1px solid #0E72A4;
-/*        background-color: #FFFFFF;*/
-    background-color: #efefef;
+    background-color: #EFEFEF;
     margin-top: 1px;
     margin-bottom: 1px;
 }
@@ -235,6 +235,7 @@ a:active {
 .tableb_alternate {
     background: #E4E4E4;
 }
+
 
 .tableb_compact {
     background: #EFEFEF ;
@@ -424,7 +425,6 @@ a:active {
     margin-top: 1px;
     margin-bottom: 1px;
     max-height:1.5em;
-    overflow:hidden;
     white-space:nowrap;
     display: block;
     position: relative;
@@ -509,9 +509,9 @@ a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlet
 .display_media {
     background: #EFEFEF ;
     padding-top: 3px;
-    padding-right: 10px;
+    padding-right: 3px;
     padding-bottom: 3px;
-    padding-left: 10px;
+    padding-left: 3px;
 }
 
 .thumbnails {
@@ -631,6 +631,16 @@ a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlet
     cursor : default;
 }
 
+.listbox_lang {
+    color: #000000;
+    background-color: #D1D7DC;
+    border: 1px solid #0E72A4;
+    font-size: 80%;
+    font-family: Arial, Helvetica, sans-serif;
+    vertical-align : middle;
+
+}
+
 .pic_title {
     color: #000000;
     font-size: 120%;
@@ -660,21 +670,6 @@ a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlet
 .cpg_user_message {
     font-size:1.4em;
     font-weight:bold;
-}
-
-.listbox_lang {
-    color: #000000;
-    background-color: #D1D7DC;
-    border: 1px solid #D1D7DC;
-    font-size: 80%;
-    font-family: Arial, Helvetica, sans-serif;
-    vertical-align : middle;
-
-}
-
-.cpg_user_message {
-    font-size:1.4em;
-    font-weight:bold;
     color:red;
 }
 
@@ -685,15 +680,36 @@ a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlet
     margin: 3px 20px;
 }
 
-#vanity img {border:0}
-#v_php {float:left;background-image:url(../../images/powered-php.gif);}
-#v_php:hover {background-image:url(../../images/h_powered-php.gif);}
-#v_mysql {float:left;background-image:url(../../images/powered-mysql.gif);}
-#v_mysql:hover  {background-image:url(../../images/h_powered-mysql.gif);}
-#v_xhtml {float:right;background-image:url(../../images/valid-xhtml10.gif);}
-#v_xhtml:hover {background-image:url(../../images/h_valid-xhtml10.gif);}
-#v_css {float:right;background-image:url(../../images/valid-css.gif);}
-#v_css:hover{background-image:url(../../images/h_valid-css.gif);}
+#vanity img {
+	border:0
+}
+#v_php {
+	float:left;
+	background-image:url(../../images/powered-php.gif);
+}
+#v_php:hover {
+	background-image:url(../../images/h_powered-php.gif);
+}
+#v_mysql {
+	float:left;
+	background-image:url(../../images/powered-mysql.gif);
+}
+#v_mysql:hover  {
+	background-image:url(../../images/h_powered-mysql.gif);
+}
+#v_xhtml {
+	float:right;background-image:url(../../images/valid-xhtml10.gif);
+}
+#v_xhtml:hover {
+	background-image:url(../../images/h_valid-xhtml10.gif);
+}
+#v_css {
+	float:right;
+	background-image:url(../../images/valid-css.gif);
+}
+#v_css:hover {
+	background-image:url(../../images/h_valid-css.gif);
+}
 
 #cpg_main_block {
     border: 1px solid #666666;
@@ -710,30 +726,20 @@ a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlet
     padding-bottom:3px;
 }
 
-
-#social_bookmarks_wrapper {
-    text-align:center;
-    vertical-align:middle;
-    float:left;
-    padding-left:15px;
-}
-
-#social_bookmarks_text {
-    font-size: 9px;
-    padding-top:2px;
-    /*display:none;*/ /* un-comment to hide the text in front of the social bookmarks */
-}
-
-div.social_bookmarks {
-    float:left;
-    padding-left:2px;
-    padding-right:2px;
-}
-
 #cpgChooseLanguageWrapper {
+    float:left;
+    margin-left:3px;
+    margin-right:3px;
+    margin-top:0px;
+    margin-bottom:0px;
 }
 
 #cpgChooseThemeWrapper {
+    float:left;
+    margin-left:3px;
+    margin-right:3px;
+    margin-top:0px;
+    margin-bottom:0px;
 }
 
 .filmstrip_background {
@@ -766,4 +772,91 @@ div.social_bookmarks {
 }
 .dtree .clip {
     overflow: hidden;
+}
+
+/* jQuery Bookmark styles */
+.bookmark_list {
+	display: block;
+	list-style-type: none;
+	margin: 0px;
+	padding: 0px;
+}
+@media screen and (-webkit-min-device-pixel-ratio:0) {  /* Safari3/Opera9 */
+	.bookmark_list {
+		font-size: 100%;
+	}
+}
+html:first-child .bookmark_list {  /* Opera */
+	/*font-size: 80%;*/
+}
+.bookmark_list li {
+	float: left;
+	width: 23%;
+	margin: 0% 0.5%;
+	padding: 2px;
+	background-color: #eee;
+	border: 1px outset;
+	list-style-type: none;
+}
+.bookmark_compact {
+	background-color: #eee;
+	border: 1px outset;
+}
+.bookmark_compact li {
+	width: 16px;
+	height: 16px;
+	margin: 0%;
+	background-color: transparent;
+	border: none;
+}
+.bookmark_list a {
+	width: 100%;
+}
+.bookmark_list span {
+	display: inline-block;
+	width: 16px;
+	height: 16px;
+}
+.bookmark_list img {
+	border: none;
+	vertical-align: bottom;
+}
+@media screen and (-webkit-min-device-pixel-ratio:0) {  /* Safari3/Opera9 */
+	.bookmark_list img {
+		margin-bottom: 3px;
+		vertical-align: middle;
+	}
+}
+html:first-child .bookmark_list img { /* Opera */
+	margin-bottom: 3px;
+	vertical-align: middle;
+}
+
+#bookmarkIt { /* This is the container that wraps the entire social bookmarks button */
+	float: left; 
+	border: 1px solid #0E72A4; 
+	padding: 0px 3px; 
+    font-size: 80%; 
+    cursor: pointer;
+    background-color: #D1D7DC;
+    margin-left:3px;
+    margin-right:3px;
+    margin-top:0px;
+    margin-bottom:0px; 
+} 
+
+#popupClose { 
+	display: none; 
+	vertical-align: top; 
+} 
+#popupBookmark { 
+	display: none; 
+	position: absolute; 
+	z-index: 100; 
+} 
+#popupBookmark ul { 
+	float: left; 
+	width: 180px; 
+    border: 1px solid #aaa; 
+    background-color: #fff; 
 }
