Updater can now be run using cookie authentication; fallback mechanisms existing as well
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@5040 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/installer.css
+++ b/cpg1.5.x/installer.css
@@ -46,8 +46,11 @@ hr {
 }
 
 .textinput {
-        border: groove 1px;
-        width: 100%;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 100%;
+    border: 1px solid #D1D7DC;
+    padding-right: 3px;
+    padding-left: 3px;
 }
 
 .listbox {
@@ -216,11 +219,6 @@ form {
 {
     background-color: green;
     color: white;
-    text-align: center;
-}
-
-.input
-{
     text-align: center;
 }
 
