--- a/cpg1.5.x/docs/style.css
+++ b/cpg1.5.x/docs/style.css
@@ -17,71 +17,80 @@
 **********************************************/
 
 body {
-        color: black;
-        font-family: Verdana, Arial, Helvetica, sans-serif;
+    color: black;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 h1,h2,h3,h4,h5,h6 {
-        font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-        text-decoration: none;
-        color: #0E72A4;
+    font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: #0E72A4;
 }
 
 p {
-        font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .small {
-        font-size: 9px;
-        text-align:right;
-        margin-top:0px;
-        margin-bottom:0px;
+    font-size: 9px;
+    text-align:right;
+    margin-top:0px;
+    margin-bottom:0px;
 }
 
 .smallcode {
-        font-size: 0.9em;
+    font-size: 0.9em;
 }
 
 .maintable {
-        border: 1px solid #0E72A4;
-        background-color: #efefef;
-        margin-top: 1px;
-        margin-bottom: 1px;
+    border: 1px solid #0E72A4;
+    background-color: #efefef;
+    margin-top: 1px;
+    margin-bottom: 1px;
 }
 
 .tableh1 {
-        background : #0E72A4 ;
-        color : #FFFFFF;
-        padding-top: 3px;
-        padding-right: 10px;
-        padding-bottom: 3px;
-        padding-left: 10px;
+    background : #0E72A4 ;
+    color : #FFFFFF;
+    padding-top: 3px;
+    padding-right: 10px;
+    padding-bottom: 3px;
+    padding-left: 10px;
+}
+
+.tableh2 {
+	background: #D1D7DC ;
+	color : #000000;
+	padding-top: 3px;
+	padding-right: 10px;
+	padding-bottom: 3px;
+	padding-left: 10px;
 }
 
 .tableb {
-        background: #EFEFEF ;
-        padding-top: 3px;
-        padding-right: 10px;
-        padding-bottom: 3px;
-        padding-left: 10px;
+    background: #EFEFEF ;
+    padding-top: 3px;
+    padding-right: 10px;
+    padding-bottom: 3px;
+    padding-left: 10px;
 }
 
 .tableb_alternate {
-        background: #E4E4E4;
+    background: #E4E4E4;
 }
 
 .tablef {
-        background: #D1D7DC;
-        padding-top: 10px;
-        padding-right: 10px;
-        padding-bottom: 10px;
-        padding-left: 10px;
+    background: #D1D7DC;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
 }
 
 .doc_info_wrapper {
-        font-size: 9px;
-        color:#818181;
-        /*border:1px solid #818181;*/
-        text-align:right;
+    font-size: 9px;
+    color:#818181;
+    /*border:1px solid #818181;*/
+    text-align:right;
 }
 
