--- a/cpg1.5.x/docs/screen.css
+++ b/cpg1.5.x/docs/screen.css
@@ -34,14 +34,15 @@ table {
 
 h1 {
 	font-weight: bolder;
-	font-size: 2.1em;
+	font-size: 2.4em;
 	line-height: 1.2em;
 	padding-top:20px;
 	padding-bottom:0px;
 }
 
 h2 {
-	font-size: 1.8em;
+	font-weight: bolder;
+    font-size: 2.0em;
 	line-height: 1.3em;
 	padding-top:20px;
 	padding-bottom:0px;
@@ -49,12 +50,19 @@ h2 {
 
 h3 {
 	font-weight: bolder;
-	font-size: 1.4em;
+	font-size: 1.6em;
 	padding-top:20px;
 	padding-bottom:0px;
 }
 
 h4 {
+	font-weight: bold;
+	font-size: 1.2em;
+	padding-top:20px;
+	padding-bottom:0px;
+}
+
+h5 {
 	font-weight: bold;
 	font-size: 1.0em;
 	padding-top:20px;
