- Merging the changes done in cpg15x - Committing in batches as commit is failing for large set of files
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@5184 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpgdbal/docs/print.css
+++ b/cpgdbal/docs/print.css
@@ -11,9 +11,9 @@
   ********************************************
   Coppermine version: 1.5.0
   $Source$
-  $Revision: 4499 $
-  $LastChangedBy: pvanrompay $
-  $Date: 2008-06-05 03:12:18 +0530 (Thu, 05 Jun 2008) $
+  $Revision: 5129 $
+  $LastChangedBy: gaugau $
+  $Date: 2008-10-18 16:03:12 +0530 (Sat, 18 Oct 2008) $
 **********************************************/
 
 body {
