Various documentation improvements
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@5334 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/docs/style/style.css
+++ b/cpg1.5.x/docs/style/style.css
@@ -40,6 +40,8 @@ p {
 
 .smallcode {
     font-size: 0.9em;
+    font-style: normal;
+	font-family: "Courier New", Courier, monospace;
 }
 
 .maintable {
