added the new filmstripe.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@5383 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/classic/style.css
+++ b/cpg1.5.x/themes/classic/style.css
@@ -1086,3 +1086,9 @@ a.progressCancel:hover {
 .cluetip-rounded #cluetip-title, .cluetip-rounded #cluetip-inner { 
 	zoom: 1; 
 }
+
+/** Filmstrip styles */
+div#film { 
+	padding: 5px 0 5px 0; 
+	overflow:hidden; 
+}
