--- a/cpg1.5.x/themes/igames/style.css
+++ b/cpg1.5.x/themes/igames/style.css
@@ -1133,3 +1133,9 @@ html:first-child .bookmark_list img { /* Opera */
 .cluetip-rounded #cluetip-title, .cluetip-rounded #cluetip-inner { 
 	zoom: 1; 
 }
+
+/** Filmstrip styles */
+div#film { 
+	padding: 5px 0 5px 0; 
+	overflow:hidden; 
+}
