--- a/cpg1.5.x/js/datePicker.css
+++ b/cpg1.5.x/js/datePicker.css
@@ -1,3 +1,20 @@
+/*************************
+  Coppermine Photo Gallery
+  ************************
+  Copyright (c) 2003-2008 Dev Team
+  v1.1 originally written by Gregory DEMAR
+
+  This program is free software; you can redistribute it and/or modify
+  it under the terms of the GNU General Public License version 3
+  as published by the Free Software Foundation.
+
+  ********************************************
+  Coppermine version: 1.5.0
+  $Source$
+  $Revision: 5406 $
+  $LastChangedBy: pvanrompay $
+  $Date: 2008-12-15 23:25:07 +0100 (Mo, 15 Dez 2008) $
+**********************************************/
 
 table.jCalendar {
 	border: 1px solid #000;
